--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 0 3em;
+    opacity: 1;
 }
 
 .deck .card {
@@ -112,3 +113,35 @@ h1 {
   min-width: 15px;
   align-items: center;
 }
+
+/* Style win-or-lose section */
+* .noVisible {
+  display: none;
+}
+
+.resul-deck {
+  width: 400spx;
+  min-height: auto;
+  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+  padding: 32px;
+  border-radius: 10px;
+  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0 3em;
+
+  text-align: center;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+}
+.message-win-lose {
+  display: block;
+  /*width: 390px;*/
+}
+/*.win-or-lose .score-panel {
+  text-align: left;
+  width: 345px;
+  margin-bottom: 10px;*/
