FIXED BUG: 	-THE BUG: Restarting the game several times with out having playing, 	that set a new 'click' event to cards. Thus when player wants to 	play after restarting the game, let say for example 8-times, 	the 'cilck' event trigger this 8 times -> game behaves strange. 	-FIXED: clicking the restart button remove 'click' event on cards 	and then set a new 'click' event to cards again.

--- a/css/app.css
+++ b/css/app.css
@@ -108,6 +108,9 @@ h1 {
     float: right;
     cursor: pointer;
 }
+* .hidden {
+  visibility: hidden;
+}
 /* Style for timer panel */
 .elpasedTime .time {
   min-width: 15px;
