--- a/css/app.css
+++ b/css/app.css
@@ -38,8 +38,8 @@ h1 {
  */
 
 .deck {
-    width: 660px;
-    min-height: 680px;
+    width: 530px;
+    min-height: 530px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
     border-radius: 10px;
@@ -48,13 +48,13 @@ h1 {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 0 0 3em;
+    margin: 0 0 1em;
     opacity: 1;
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
+    height: 100px;
+    width: 100px;
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
@@ -152,3 +152,59 @@ h1 {
   text-align: left;
   width: 345px;
   margin-bottom: 10px;*/
+
+@media only screen and (max-width: 750px) {
+  .deck {
+      width: 500px;
+      min-height: 520px;
+  }
+
+  .deck .card {
+      height: 90px;
+      width: 90px;
+  }
+
+}
+@media only screen and (max-width: 550px) {
+  .deck {
+      width: 350px;
+      min-height: 350px;
+  }
+
+  .deck .card {
+      height: 65px;
+      width: 65px;
+  }
+  .score-panel {
+    width: 290px;
+  }
+}
+@media only screen and (max-width: 410px) {
+  .deck {
+      width: 310px;
+      min-height: 310px;
+  }
+
+  .deck .card {
+      height: 56px;
+      width: 56px;
+  }
+  .score-panel {
+    width: 270px;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .deck {
+      width: 275px;
+      min-height: 275px;
+      padding: 15px;
+  }
+
+  .deck .card {
+      height: 55px;
+      width: 55px;
+  }
+  .score-panel {
+    width: 200px;
+  }
+}
